# Yaict

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
tests/: test_image_manager.py
tests/imgs/: CREDITS.md
yaict/: app.py  dataset_manager.py  image_display.py  image_manager.py  router.py
