[tool.poetry]
name = "yaict"
version = "0.1.0"
description = "Yet Another Image Captioning Tool."
authors = ["INFCode <infcode@163.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
